src/test/deca/context/invalid/created/binary_exp/op_comp/eq_float_null.deca
// Description :
//    test eq entre un float et un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type float, null, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)


{
float a;
boolean c = a == null;
}
